fixed media querry gaps

--- a/Learnhall/CSS/FAQ's.css
+++ b/Learnhall/CSS/FAQ's.css
@@ -65,7 +65,7 @@ footer {
 /**********************
 * large desktop layout*
 **********************/
-@media only screen and (min-width: 1440px) {
+@media only screen and (min-width: 1441px) {
   .FQ {
     padding-bottom: 60px;
   }
@@ -133,7 +133,7 @@ footer {
 /**********************
 **** Desktop layout****
 **********************/
-@media only screen and (min-width: 960px) and (max-width: 1440px) {
+@media only screen and (min-width: 960px) and (max-width: 1441px) {
   .FQ {
     padding-bottom: 55px;
   }
